# devops-ai-agent

./: .env.example  .gitignore  .mcp.json.example  DevOps_AI_Agent_Presentation.pptx  README.md  nohup.out  pyproject.toml
.github/: copilot-instructions.md
config/: config.local.example.yaml  config.yaml
doc/: ai-model-comparison-case-study.md  architectural-response.md  critical-review.md  github-models-limitations.md  implementation-summary.md  index.html  local-setup.md  mcp-implementation-tracker.md  multi-agent-decision.md  opus-review-prompt.md  phase-tracker.md  security-design.md  story-writing-guide.md  tool-use-design.md
scripts/: generate_ppt.py
src/: __init__.py  cli.py  config.py  history.py  pipeline.py  profiles.py  setup.py
src/agent/: __init__.py  analyzer.py  context_builder.py  implement.py  plan.py
src/dashboard/: app.py
src/integrations/: __init__.py  azure_devops.py  git_manager.py  webhook_server.py  zendesk.py
src/mcp/: __init__.py  azure_devops_server.py  config.py  filesystem_server.py  git_server.py  logging_utils.py
src/reviewer/: __init__.py  ai_reviewer.py  test_runner.py
src/security/: __init__.py  preflight.py  wizard.py
src/utils/: __init__.py  data_consent.py  events.py  progress.py  (+3 more)
story-test-temp/: test-1636226.txt
templates/: analyze.md  implement.md  review.md
tests/: test_config.py  test_context_builder.py  test_mcp_servers.py  test_phase2_context.py  test_phase3_multiplatform.py  test_phase4_history.py  test_phase5_setup.py  test_reviewer.py  test_security.py  test_security_phase2.py  test_tool_use.py
(+3 files in other folders)
